home3/k8s-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home3-live-mysql
  labels:
    app: home3-live-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home3-live-mysql
  template:
    metadata:
      name: home3-live-mysql
      labels:
        app: home3-live-mysql
    spec:
      containers:
        - name: home3-live-mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          #配置持久化
          volumeMounts:
            # 这里一定要对应 mysql 数据存储的位置
            # 通过 mysql 的配置可以更改这个目录
            - mountPath: /var/lib/mysql
#              pod里面有很多volumes，我要用哪个，要和下面一一对应
              name: mysql-storage
          ports:
            - containerPort: 3306
#        - name: home3-live-hadoop
      restartPolicy: Always
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: home3-mysql-live-claim
#        - name: hadoop-storage
#          persistentVolumeClaim:
#            claimName: home3-hadoop-live-claim
