home3/k8s-home3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home3-live
spec:
  selector:
    app: home3-live
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8080
  type: LoadBalancer
