home3/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home3-live-mysql
spec:
  selector:
    app: home3-live-mysql
  ports:
    - protocol: TCP
      #你访问的端口
      port: 3309
      targetPort: 3306
      nodePort: 30001
  type: NodePort
