home3/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home3-live-redis
spec:
  selector:
    app: home3-live-redis
  ports:
    - protocol: TCP
      port: 6379
      #redis 默认端口
      targetPort: 6379
      nodePort:  30003
  type: NodePort
